<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="@color/editorColorPrimary"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back_arrow_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_back"
                android:padding="8dp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/fullscreen_dialog_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:textAllCaps="true"
                android:text="@string/save"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/fullscreen_dialog_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/fullscreen_dialog_save"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:textAllCaps="true"
                android:text="@string/delete"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/note_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/hint_note_title"
                android:inputType="textCapSentences"
                android:layout_margin="12dp"
                android:backgroundTint="@color/colorAccent"
                android:textSize="24sp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/note_content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="12dp"
                android:layout_weight="10"
                android:textSize="18sp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:backgroundTint="@color/transparent_color" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>